--- a/4/css/style.css
+++ b/4/css/style.css
@@ -1,21 +1,15 @@
-table{
-    background-color: royalblue;
-    width: 100%;
-}
-.left{
-    width: 25%;
-    background-color: salmon;
-box-shadow: 3px 8px 9px 4px #000000;
-}
-.center{
-    width: 5%;
-box-shadow: 3px 8px 9px 4px #000000;
-}
-.right{
-    width: 70%;
-    background-color: seagreen;
-box-shadow: 3px 8px 9px 4px #000000;
-}
-h2{
-    font-family: ;
-}
+  
+  .CV{color:cadetblue}
+
+  th.right{width: 70%;background-color: khaki;border:solid;box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);;border-radius: 30%;}
+  th.centre{width: 5%;}
+  th.left{width: 25%;background-color: khaki;border: solid;border-radius: 30%;}
+  h2{
+      font-family: 'Ephesis', cursive;
+  }
+   .up{
+       border: black
+       box-shadow: 0px -5px 5px -5px rgba(34, 60, 80, 0.6);
+      :hover 
+    }
+    
