--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     height: 100px;
     background-color: rgb(74, 59, 117);
     margin: 10px;
-    color:black;
+    color:rgb(8, 8, 8);
     padding: 20px;
     border-radius: 20px;
     text-align: center;
@@ -32,7 +32,7 @@
     
     margin: 10px;
     color: white;
-    background-color: black;
+    background-color: rgb(74, 59, 117);
     text-align: center;
     color: black;
     padding: 20px;
