--- a/12/style.css
+++ b/12/style.css
@@ -1,14 +1,16 @@
-CV{color:cadetblue}
-
-th.right{width: 70%;background-color: khaki;border:solid;box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);;border-radius: 30%;}
-th.centre{width: 5%;}
-th.left{width: 25%;background-color: khaki;border: solid;border-radius: 30%;}
-h2{
-    font-family: 'Ephesis', cursive;
+.centre{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
- .up{
-     border: black
-     box-shadow: 0px -5px 5px -5px rgba(34, 60, 80, 0.6);
-    :hover 
-  }
-  
+.yellow{
+    width: 25%;
+    height: 60vh;
+    background-color: blanchedalmond;
+  padding: 10px;
+}
+.green{
+    width: 25%;
+    height: 60vh;
+    background-color: rgb(24, 163, 110);
+}
